--- a/css/app.css
+++ b/css/app.css
@@ -3,12 +3,20 @@
 html {
     box-sizing: border-box;
     font-family: 'Poppins';
+    background-color: rgb(16, 16, 16);
 }
 
 *, *:before, *:after{
     box-sizing: inherit;
     margin: 0;
     width: 100%;
+    color: #fff;
+}
+
+.container{
+    display: block;
+    margin: 0 auto;
+    width: 1200px;
 }
 
 /*Header*/
@@ -52,7 +60,7 @@ html {
 
 .work-results h1{
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
 }
 
 .work-container{
@@ -62,15 +70,26 @@ html {
     gap: 20px;
 }
 
+.work-item div{
+    text-align: center;
+    font-size: 20px;
+    background-color: rgb(238, 166, 78);
+    color: #fff;
+    padding: 10px;
+    cursor: pointer;
+    border-end-end-radius: 10px;
+    transition: background-color 1s ease;
+}
+
+.work-item div:hover{
+    background-color: rgb(184, 119, 59);
+}
+
 .work-item img{
     height: 600px;
     object-fit: cover;
     object-position: top;
-}
-
-.work-item p{
-    text-align: center;
-    font-size: 20px;
+    display: block;
 }
 
 /*Footer*/
@@ -93,4 +112,13 @@ html {
     text-align: center;
     font-size: 50px;
     text-transform: uppercase;
+}
+
+.comments-container{
+    margin-top: 80px;
+    font-size: 40px;
+}
+
+.input-comment h3{
+    text-align: center;
 }
