--- a/css/app.css
+++ b/css/app.css
@@ -10,7 +10,6 @@ html {
     box-sizing: inherit;
     margin: 0;
     width: 100%;
-    color: #fff;
 }
 
 .container{
@@ -119,6 +118,45 @@ html {
     font-size: 40px;
 }
 
-.input-comment h3{
+.comments-container label{
+    display: block;
     text-align: center;
+    color: #fff;
+    margin-bottom: 30px;
+}
+
+.input-comment input{
+    font-size: 20px;
+    width: 200px;
+    display: block;
+    margin: 15px auto;
+    cursor: pointer;
+    padding: 10px;
+    background-color: rgb(238, 166, 78);
+    border: 0;
+    color: #fff;
+    border-end-end-radius: 10px;
+}
+
+.input-comment input:hover{
+    background-color: rgb(184, 119, 59);
+}
+
+
+.comment-list ul{
+    list-style: none;
+    padding: 0;
+}
+.comment-list li{
+    margin-top: 30px;
+    color: #fff;
+}
+
+.comment-list li i{
+    text-align: end;
+    cursor: pointer;
+}
+
+.comment-list li i:hover{
+    color: rgb(238, 166, 78);
 }
