--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+/* Variables */
+:root{
+    --color-primary: #1B4242;
+    --color-secondary: #5C8374;
+    --color-tertiary: #9EC8B9;
+    --color-background: #202021;
+}
+
 html {
     box-sizing: border-box;
     font-family: 'Poppins';
-    background-color: rgb(16, 16, 16);
+    background-color: var(--color-background);
+    font-size: 25px;
 }
 
 *, *:before, *:after{
@@ -16,6 +25,16 @@ html {
     display: block;
     margin: 0 auto;
     width: 1200px;
+    text-transform: uppercase;
+}
+
+/*Globales*/
+.title{
+    text-align: center;
+    font-size: 50px;
+    color: #fff;
+    margin-top: 80px;
+    font-weight: 500;
 }
 
 /*Header*/
@@ -57,11 +76,6 @@ html {
     margin-top: 80px;
 }
 
-.work-results h1{
-    text-align: center;
-    font-size: 40px;
-}
-
 .work-container{
     width: 100%;
     display: grid;
@@ -72,7 +86,7 @@ html {
 .work-item div{
     text-align: center;
     font-size: 20px;
-    background-color: rgb(238, 166, 78);
+    background-color: var(--color-secondary);
     color: #fff;
     padding: 10px;
     cursor: pointer;
@@ -81,7 +95,7 @@ html {
 }
 
 .work-item div:hover{
-    background-color: rgb(184, 119, 59);
+    background-color: var(--color-primary);
 }
 
 .work-item img{
@@ -93,7 +107,6 @@ html {
 
 /*Footer*/
 .footer{
-    background-color: blueviolet;
     position: relative;
     margin-top: 80px;
 }
@@ -113,33 +126,21 @@ html {
     text-transform: uppercase;
 }
 
-.comments-container{
-    margin-top: 80px;
-    font-size: 40px;
-}
-
-.comments-container label{
-    display: block;
-    text-align: center;
-    color: #fff;
-    margin-bottom: 30px;
-}
-
 .input-comment input{
     font-size: 20px;
-    width: 200px;
+    width: 300px;
     display: block;
     margin: 15px auto;
     cursor: pointer;
     padding: 10px;
-    background-color: rgb(238, 166, 78);
+    background-color: var(--color-secondary);
     border: 0;
     color: #fff;
     border-end-end-radius: 10px;
 }
 
 .input-comment input:hover{
-    background-color: rgb(184, 119, 59);
+    background-color: var(--color-primary);
 }
 
 
@@ -158,7 +159,7 @@ html {
 }
 
 .comment-list li i:hover{
-    color: rgb(238, 166, 78);
+    color: var(--color-tertiary);
 }
 
 .comment-hour{
@@ -167,4 +168,14 @@ html {
 
 .comment-container{
     display: flex;
+}
+
+.comment-textarea{
+    height: 100px;
+    font-size: 20px;
+    padding: 10px;
+    border: 0;
+    border-end-end-radius: 10px;
+    resize: none;
+    font-size: 25px;
 }
